# my_keyboards

custom_code/python/: .gitignore  .pdm-python  parse_keybr.py  pyproject.toml  shell.nix  sqlite_parse.py  sqlitize.sh  typing-data.json
keyboards/dz60/keymaps/stratosgear/: customLogic.c  keymap.c
keyboards/splitkb/kyria/keymaps/stratosgear/: keymap.c
keyboards/winry/winry315/keymaps/stratosgear/: keymap.c
keyboards/winry/winry315_str/: config.h  rules.mk  winry315_str.c  winry315_str.h
keyboards/winry/winry315_str/keymaps/stratosgear/: keymap.c
