[tool.poetry]
name = "qmk_misc"
version = "0.1.0"
description = ""
authors = ["Stratos Gerakakis <stratos@gerakakis.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
sqlite-utils = "^3.30"
datasette = "^0.64.2"
ruff = "^0.0.262"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
